[project]
name = "llamaindex-vs-langchain-basics"
version = "0.1.0"
description = "Fork of the https://github.com/Coding-Crashkurse/LLamaIndex-vs-LangChain-Basics"
authors = [{ name = "Your Name", email = "you@example.com" }]
readme = "README.md"
requires-python = ">=3.11,<4.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false


[tool.poetry.dependencies]
python-dotenv = "^1.0.1"
langchain = "^0.3.19"
llama-index = "^0.12.19"
unstructured = "^0.16.23"
langchain-openai = "^0.3.6"
langchain-community = "^0.3.18"
chromadb = "^0.6.3"
llama-index-vector-stores-chroma = "^0.4.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

